--- a/src/assets/style/_main.scss
+++ b/src/assets/style/_main.scss
@@ -14,7 +14,48 @@
 
     .login-form {
       flex: 0 0 auto;
-      width: 50%;
+      width: 40%;
+
+      .auth-content {
+        padding: 20px;
+        _background-color: #fff;
+
+        > h3 {
+          margin-bottom: 1.4rem;
+          text-align: center;
+          color: #000;
+          font-size: calc(1.275rem + 0.3vw);
+        }
+
+        .form-control {
+          border: 0;
+          border-radius: 0.3125rem;
+          box-shadow: 0 0 0.9375rem rgba(0, 0, 0, 0.08);
+        }
+
+        .form-group {
+          margin-bottom: 2rem;
+
+          label {
+            padding-bottom: 6px;
+          }
+
+          input {
+            min-height: 40px;
+          }
+
+          button {
+            width: 100%;
+          }
+        }
+
+      }
+
+      .form-group {
+        strong {
+          color: #888;
+        }
+      }
     }
   }
 }
