--- a/src/assets/style/_reset.scss
+++ b/src/assets/style/_reset.scss
@@ -1,1 +1,12 @@
+input {
+  border: 0;
+  outline: 0;
+  padding: 0;
+}
 
+button {
+  border: 0;
+  padding: 0;
+  outline: 0;
+  cursor: pointer;
+}
